--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,12 @@ jobs:
         run: npm install
         working-directory: app/frontend
 
-      - name: Build frontend
-        run: npm run build
-        working-directory: app/frontend
+      # - name: Build frontend
+      #   run: npm run build
+      #   working-directory: app/frontend
 
     #   Run backend test
-    #   - name: Run backend tests
-    #     run: npm test
-    #     working-directory: api
+      - name: Run backend tests
+        run: npm test
+        working-directory: api
 
