--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,17 @@ jobs:
         run: npm install
         working-directory: app/frontend
 
-      # - name: Build frontend
-      #   run: npm run build
-      #   working-directory: app/frontend
-
     #   Run backend test
       - name: Run backend tests
         run: npm test
         working-directory: api
+
+    #   Run backend test
+      - name: Run frontend tests
+        run: npm test
+        working-directory: app/frontend
+
+    # - name: Build frontend
+      #   run: npm run build
+      #   working-directory: app/frontend
 
