--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -35,7 +35,14 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7"
-  }
+  },
+
+  "jest": {
+      "transform": {
+        "^.+\\.(js|jsx)$": "babel-jest"
+      }
+    }
 }
