--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -37,12 +37,15 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7"
+    "@testing-library/react": "^15.0.7",
+    "identity-obj-proxy": "^3.0.0"
   },
-
   "jest": {
-      "transform": {
-        "^.+\\.(js|jsx)$": "babel-jest"
-      }
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+     "moduleNameMapper": {
+      "\\.css$": "identity-obj-proxy"
     }
+  }
 }
