--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,12 +37,16 @@ jobs:
         run: npm test
         working-directory: api
 
-    #   Run backend test
-      - name: Run frontend tests
-        run: npm test
-        working-directory: app/frontend
+    #   Run frontend test
+      # - name: Run frontend tests
+      #   run: npm test
+      #   working-directory: app/frontend
 
-    # - name: Build frontend
+      # - name: Build backend
+      #   run: npm run build
+      #   working-directory: api
+
+      # - name: Build frontend
       #   run: npm run build
       #   working-directory: app/frontend
 
