fix:TDP-250 - updating the build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,12 @@ jobs:
         with:
           node-version: '14'
 
-      # Build the backend
+      # Install backend dependencies
       - name: Install backend dependencies
         run: npm install
         working-directory: api
 
-      # Build the frontend
+      # Install frontend dependencies
       - name: Install frontend dependencies
         run: npm install
         working-directory: app/frontend
@@ -37,12 +37,7 @@ jobs:
         run: npm test
         working-directory: api
 
-    #   Run frontend test
-      # - name: Run frontend tests
-      #   run: npm test
-      #   working-directory: app/frontend
-
+      # Build the frontend
       - name: Build frontend
         run: npm run build
         working-directory: app/frontend
-
