feat:TDP-250 - trigger for push and changes made in the app directory test

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -2,7 +2,7 @@ name: Build, Push and Deploy backend Image to AWS
 run-name: ${{ github.actor }} Build and Push backend Image to AWS ECR
 
 # Trigger only when changes are made in the api directory and there is a push or 
-# pull request on the main branch
+# pull request on the main branch.
 on:
   push:
     branches: 
