--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -2,7 +2,7 @@ name: Build, Push and Deploy frontend Image to AWS
 run-name: ${{ github.actor }} Build and Push frontend Image to AWS ECR
 
 # Trigger only when changes are made in the app/frontend directory and there is a push or 
-# pull request on the main branch
+# pull request on the main branch.
 on:
   push:
     branches: 
