--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,8 +1,8 @@
 name: Build, Push and Deploy frontend Image to AWS
 run-name: ${{ github.actor }} Build and Push frontend Image to AWS ECR
 
-# Trigger only when changes are made in the app/frontend directory and there is a push or 
-# pull request on the main branch.
+# Trigger only when changes are made in the app/frontend directory for PR and there is a push 
+# on the main branch.
 on:
   push:
     branches: 
