feat:TDP-250 - Deploying application to aws ecr path change

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,7 +13,7 @@ RUN npm install
 # Copy the rest of the application code to the working directory
 COPY . .
 
-# Expose the port the app runs on to the world.
+# Expose the port the app runs on to the world
 EXPOSE 4000
 
 # Define the command to run the application
