--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -2,7 +2,7 @@ name: Build, Push and Deploy backend Image to AWS
 run-name: ${{ github.actor }} Build and Push backend Image to AWS ECR
 
 # Trigger only when changes are made in the api directory for PR and there is a push
-# on the main branch.
+# and a PR on the main branch.
 on:
   push:
     branches: 
