feat:TDP-250 - Deploying application enhancing5

--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -16,7 +16,7 @@ COPY . .
 # Build the React application
 RUN npm run build
 
-# Expose the port.
+# Expose the port
 EXPOSE 3000
 
 # Command to run the application
